# gsp_neuro

./: .gitignore  LICENSE  README.md  pyproject.toml
gsp_neuro/: __init__.py  brain.py  consensus_connectome.py  data_loading.py  interactive.py  plotting.py  utils.py
gspneuro/: __init__.py  brain.py  data_loading.py  plotting.py  utils.py
notebooks/: PRS_GraphSigProcess.ipynb  atlas_xplore.ipynb  atrophies.ipynb  combine_figures.ipynb  compute_consensus_conn.ipynb  connectomes_sandbox.ipynb  diffusion.ipynb  grid_gsp.ipynb  grid_line.ipynb  integ_segreg_experiment.ipynb  main_demo.ipynb  nice_surf_plots.ipynb  pygsp_tuto.ipynb  real_brain.ipynb  sandbox.ipynb  spectral_clustering.ipynb  swiss_roll.ipynb  timeseries_xplore.ipynb  toy_brain.ipynb
scripts/: figures_to_pdf.py  pdf_summary.sh  plot_atrophies.py  plot_harmonics.py  plot_harmonics_sub.py  rsn_error_recons.py  rsn_plots.py  rsn_recons.sh
