[project]
name = "gsp_neuro"
version = "0.0.1"
authors = [
  { name="Hugo Fluhr", email="hugo.fluhr@gmail.com" },
]
description = "Code to run basic Graph Signal Processing analysis on neuroimaging data."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/hugofluhr/gsp_neuro"
"Bug Tracker" = "https://github.com/hugofluhr/gsp_neuro/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

